# weather-App

./: .gitignore  Gemini_ai_call_mem_tool_v2.py  Open_ai_call_mem_tool_v2.py  pyproject.toml  tools.py
